完成远程代理的改造

--- a/cmd/remote/res/config.json
+++ b/cmd/remote/res/config.json
@@ -1,6 +1,10 @@
 {
-  "port": 20807,
-  "key": "kainhuck",
   "debug": true,
-  "method": "aes-128-cfb"
+  "server_infos": [
+    {
+      "method": "aes-128-cfb",
+      "port": 20807,
+      "key": "kainhuck"
+    }
+  ]
 }
