--- a/cmd/remote/res/config.json
+++ b/cmd/remote/res/config.json
@@ -3,6 +3,11 @@
   "server_infos": [
     {
       "method": "aes-128-cfb",
+      "port": 20806,
+      "key": "atuatuatu"
+    },
+    {
+      "method": "aes-128-cfb",
       "port": 20807,
       "key": "kainhuck"
     }
