--- a/cmd/remote/res/config.json
+++ b/cmd/remote/res/config.json
@@ -3,6 +3,16 @@
   "server_infos": [
     {
       "method": "aes-128-cfb",
+      "port": 20804,
+      "key": "atuatuatu"
+    },
+    {
+      "method": "aes-128-cfb",
+      "port": 20805,
+      "key": "atuatuatu"
+    },
+    {
+      "method": "aes-128-cfb",
       "port": 20806,
       "key": "atuatuatu"
     },
