--- a/cmd/remote/Dockerfile
+++ b/cmd/remote/Dockerfile
@@ -2,7 +2,7 @@ ARG BUILDER_BASE=golang:1.16-alpine
 FROM ${BUILDER_BASE} AS builder
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories
-RUN  --mount=type=cache,target=/var/cache/apk apk add --update --no-cache make
+RUN apk add --update --no-cache make
 
 WORKDIR /yao-proxy
 
