--- a/cmd/local/res/config.json
+++ b/cmd/local/res/config.json
@@ -28,6 +28,7 @@
       "no_proxy": [
         "192.168.1.177",
         "baidu.com",
+        "eastmoney.com",
         "192.168.1.x",
         "192.168.x.1",
         "192.168.x.x",
