--- a/cmd/local/res/config.json
+++ b/cmd/local/res/config.json
@@ -5,7 +5,32 @@
       "port": 20801,
       "remote_infos": [
         {
-          "remote_addr": "127.0.0.1:20802",
+          "remote_addr": "127.0.0.1:20803",
+          "method": "aes-128-cfb",
+          "key": "fasda213$%"
+        },
+        {
+          "remote_addr": "127.0.0.1:20804",
+          "method": "aes-128-cfb",
+          "key": "fas21da3$%"
+        }
+      ],
+      "no_proxy": [
+        "baidu.com",
+        "172.16.x.x",
+        "192.168.1.170-192.168.1.200"
+      ]
+    },
+    {
+      "port": 20802,
+      "remote_infos": [
+        {
+          "remote_addr": "127.0.0.1:20804",
+          "method": "aes-128-cfb",
+          "key": "fas21da3$%"
+        },
+        {
+          "remote_addr": "127.0.0.1:20803",
           "method": "aes-128-cfb",
           "key": "fasda213$%"
         }
