--- a/cmd/remote/res/config.json
+++ b/cmd/remote/res/config.json
@@ -2,9 +2,14 @@
   "debug": true,
   "server_infos": [
     {
+      "port": 20807,
       "method": "aes-128-cfb",
-      "port": 20805,
-      "key": "kainhuck"
+      "key": "123456"
+    },
+    {
+      "port": 20808,
+      "method": "aes-128-cfb",
+      "key": "654321"
     }
   ]
 }
